# MLOPS-Vehicle-Insurance-Deployment

./: LICENSE  ProjectStep.txt  README.md  pyproject.toml  requirements.txt  setup.py
notebook/: eda.ipynb  mongodb-set.ipynb
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/data_access/: proj1_data.py
src/exception/: __init__.py
src/pipline/: training_pipeline.py
